@@ -1,3 +1,10 @@
+2002-02-12  John Harper  <jsh@unfactored.org>
+
+	* widget.jl, stock.jl.gtk, color-preview.jl: 
+	* widgets/list.jl, widgets/file.jl: 
+
+	Ported to current gnome2 rep-gtk
+
 2002-01-29  John Harper  <jsh@unfactored.org>
 
 	* widget.jl, widget-test.jl, widget-dialog.jl, stock.jl.gtk,
